[tool.poetry]
name = "chattermill_test"
version = "0.1.0"
description = ""
authors = ["taras <4751652+tezer@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.1"
torch = "^1.9.0"
transformers = "^4.8.2"
pytorch-lightning = "^1.3.8"
sklearn = "^0.0"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
comments = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
